Feat: Navigation and entry form without location field

--- a/fevermap-front/src/assets/language/translations.json
+++ b/fevermap-front/src/assets/language/translations.json
@@ -2,12 +2,12 @@
   "fi": {
     "lang_name": "Suomi",
     "language": "Kieli",
-    "fevermap_title": "Fevermap"
+    "fevermap_title": "Fever Map"
   },
   "en": {
 
     "lang_name": "English",
     "language": "Language",
-    "fevermap_title": "Fevermap"
+    "fevermap_title": "Fever Map"
   }
 }
