--- a/app/src/assets/language/translations.json
+++ b/app/src/assets/language/translations.json
@@ -5,19 +5,19 @@
     "fevermap_title": "Fever Map",
 
     "landing": {
-      "about": "Tietoa",
-      "about_content_explanation": "on Koronavirusepidemiaa koskevan datan keräykseen luotu verkkosovellus.",
-      "about_current_methods": "Tämän hetken seurantatavat eivät anna kokonaiskuvaa tilanteesta. Kaikkien testauttaminen on aivan liian hidasta ja työlästä, eikä testejäkään varmasti ole tarpeeksi.",
-      "about_motivation": "Fever Mapin tarkoitus on korjata tämä antamalla kansalaisille tapa raportoida omasta kuumetilastaan. Näin voimme arvioida Koronavirustartuntojen määrää reaaliajassa ja tarjota viranomaisille hyödyllistä dataa taisteluun pandemian kanssa.",
-      "about_data_collection": "Fever Mapin keräämä data anonymisoidaan ja sitä käytetään globaalin tilanteen tietoisuuden lisäämiseksi.",
-      "about_current_participant_count": "Tähän päivään mennessä Fever Map on kerännyt raportteja %{participantCount} ihmiseltä.",
+      "about": "Mikä on Fevermap?",
+      "about_content_explanation": "Fevermap on verkko- ja mobiiliapplikaatio, joka on luotu helppoa ja reaaliaikaista datakeruuta varten koskien koronavirus COVID-19-pandemian levinneisyyttä.",
+      "about_current_methods": "Nykyiset seurantamenetelmät koronaviruksen levinneisyydestä eivät tarjoa kokonaiskuvaa. Laajat ihmisjoukot jäävät testauksen ulkopuolelle, jotta ajan ja resurssien saatavuus pystytään takaamaan niitä tarvitseville.",
+      "about_motivation": "Fevermap on ratkaisu ongelmaan. Fevermapin avulla, tavalliset ihmiset ympäri maailmaa voivat anonyymisti raportoida itse kuumeesta ja muista oireista. Tämä tarkoittaa sitä, että voimme arvioida COVID-19 -infektioiden todellisen laajuuden reaaliaikaisesti ja tarjota auktoriteeteille dataa, joka auttaa heitä tekemään tietoon perustuvia, oikeellisia ja hyvin ajoitettuja päätöksiä suojautumiseen liittyvistä asioista.",
+      "about_data_collection": "Fevermapin keräämä data on anonymisoity ja sitä käytetään tietoisuuden lisäämiseen globaalista tilanteesta.",
+      "about_current_participant_count": "Tähän päivään mennessä, %{participantCount} käyttäjää ovat käyttäneet Fevermapia raportoidakseen oireistaan.",
 
-      "how_to_participate": "Kuinka osallistun?",
-      "participation_info": "Osallistuaksesi sinun tulee mitata kuumeesi, ja syöttää kuumetilasi ja hieman tietoa itsestäsi datan syöttönäkymässä.",
-      "info_disclaimer": "Enne kysy tietoja, joista sinut voitaisiin tunnistaa. Arvostamme yksityisyyttäsi.",
+      "how_to_participate": "Miten osallistun?",
+      "participation_info": "Se on helppoa. Mittaat vain lämpösi ja syötät mittarin antaman vastauksen – sekä joitain statistisia tietoja, kuten syntymävuotesi ja aluekoodisi – datan syöttönäkymään.",
+      "info_disclaimer": "Emme kysy kysymyksiä jotka johtaisivat siihen, että sinut tunnistettaisiin. Arvostamme yksityisyyttäsi ja anonymiteettiäsi.",
 
-      "how_will_my_data_be_used": "Kuinka dataani tullaan käyttämään?",
-      "data_use_explanation": "Datasi anonymisoidaan jonka jälkeen se jaetaan avoimena datana API-rajapinnan kautta."
+      "how_will_my_data_be_used": "Miten dataani tullaan käyttämään?",
+      "data_use_explanation": "Data anonymisoidaan, jonka jälkeen se jaetaan avoimena datana API-rajapinnan kautta."
     },
     "entry": {
       "data_entry": "Datan syöttö",
@@ -87,19 +87,19 @@
     "fevermap_title": "Fever Map",
 
     "landing": {
-      "about": "About",
-      "about_content_explanation": "is a web application created for simple fever data collection in the Coronavirus epidemic.",
-      "about_current_methods": "Current methods of tracking the spread of the Corona virus do not yield a complete picture. It is far to slow and cumbersome to test everybody, and there isn't enough tests anyway.",
-      "about_motivation": "The Fever Map is an effort to fix this by having ordinary people around the world self-report their fever. Using biological population methods we can estimate the prevalence of COVID-19 infections in real-time and provide authorities with data that helps them fight the pandemic.",
-      "about_data_collection": "The data collected by Fever Map is anonymized and will be used to help with raising awareness of the current global situation.",
-      "about_current_participant_count": "To this day, Fever Map has accumulated reports from %{participantCount} people.",
+      "about": "What is Fevermap?",
+      "about_content_explanation": "Fevermap is a a web and mobile application created for simple and real-time data collection of the prevalence of the Coronavirus COVID-19 pandemic.",
+      "about_current_methods": "Current methods of tracking the prevalence of the Corona virus do not yield a complete picture. Large masses remain untested to keep time and resources available for those in need.",
+      "about_motivation": "Fevermap is the solution for this problem. With Fevermap, ordinary people around the world can anonymously self-report their fever and other symptoms. This means that we can estimate the true prevalence of COVID-19 infections in real-time and provide authorities with data that helps them make data-based, correct and timely decisions about protective measures..",
+      "about_data_collection": "The data collected by Fevermap is anonymized and will be used to help with raising awareness of the current global situation.",
+      "about_current_participant_count": "To this day, %{participantCount} users have used Fevermap to report their symptoms.",
 
       "how_to_participate": "How do I participate?",
-      "participation_info": "To participate, you need to measure your own body temperature, and submit it with a few other pieces of information at the Data entry -view.",
-      "info_disclaimer": "We will not ask you for any data, that could be used to identify you. We value your privacy.",
+      "participation_info": "It’s easy. You just take your temperature and feed the result – as well as a little statistical information, such as your birth year and area code – into the feed.",
+      "info_disclaimer": "We do not ask questions that could lead to you being recognized. We value your privacy and anonymity.",
 
       "how_will_my_data_be_used": "How will my data be used?",
-      "data_use_explanation": "The data will be anonymized, and shared as open data through our API."
+      "data_use_explanation": "The data will be anonymized, after which it will be shared as open data through API interface."
     },
     "entry": {
       "data_entry": "Data entry",
