--- a/app/src/assets/language/translations.json
+++ b/app/src/assets/language/translations.json
@@ -2,7 +2,7 @@
   "fi": {
     "lang_name": "Suomi",
     "language": "Kieli",
-    "fevermap_title": "Fever Map",
+    "fevermap_title": "Fevermap",
 
     "landing": {
       "about": "Tietoa",
@@ -74,8 +74,8 @@
 
     "dialog": {
       "pwa_installer": {
-        "title": "Asenna Fever Map",
-        "content": "Fever Map on mahdollista asentaa progressiivisen verkkosovelluksena. Asennettuna sovellus tarjoaa lisätoimintoja kuten parempaa suorituskykyä ja push notifikaatioita (tulossa pian).",
+        "title": "Asenna Fevermap",
+        "content": "Fevermap on mahdollista asentaa progressiivisen verkkosovelluksena. Asennettuna sovellus tarjoaa lisätoimintoja kuten parempaa suorituskykyä ja push notifikaatioita (tulossa pian).",
         "approve_text": "Asenna",
         "decline_text": "Ehkä myöhemmin"
       }
@@ -85,7 +85,7 @@
 
     "lang_name": "English",
     "language": "Language",
-    "fevermap_title": "Fever Map",
+    "fevermap_title": "Fevermap",
 
     "landing": {
       "about": "About",
@@ -156,8 +156,8 @@
     },
     "dialog": {
       "pwa_installer": {
-        "title": "Install Fever Map",
-        "content": "Fever Map can be installed as a Progressive Web Application. If installed, we can provide you with great extra features like faster runtime and push notifications (coming soon).",
+        "title": "Install Fevermap",
+        "content": "Fevermap can be installed as a Progressive Web Application. If installed, we can provide you with great extra features like faster runtime and push notifications (coming soon).",
         "approve_text": "Install",
         "decline_text": "Maybe later"
       }
@@ -168,16 +168,16 @@
 
     "lang_name": "Svenska",
     "language": "Språk",
-    "fevermap_title": "Fever Map",
+    "fevermap_title": "Fevermap",
 
     "landing": {
-      "about": "Om Fever Map",
-      "about_title": "Vad är Fever Map?",
+      "about": "Om Fevermap",
+      "about_title": "Vad är Fevermap?",
       "about_content_explanation": "är en webbapplikation skapad för att samla in data om Covid-19 epidemin.",
       "about_current_methods": "Nuvarande metoder för att följa med Coronavirusets spridning ger inte en fullständig bild. Det tar för länge att testa alla, och det finns hur som helst inte testutrustning för det.",
       "about_solution": "Fevermap is the solution for this problem. With Fevermap, ordinary people around the world can anonymously self-report their fever and other symptoms. This means that we can estimate the true prevalence of COVID-19 infections in real-time and provide authorities with data that helps them make data-based, correct and timely decisions about protective measures.",
-      "about_data_collection": "Data som insamlas av Fever Map är anonyma och kommer att användas för att öka medvetenheten om den globala situationen.",
-      "about_current_participant_count": "Hittills har Fever Map samlat in rapporter från %{participantCount} personer.",
+      "about_data_collection": "Data som insamlas av Fevermap är anonyma och kommer att användas för att öka medvetenheten om den globala situationen.",
+      "about_current_participant_count": "Hittills har Fevermap samlat in rapporter från %{participantCount} personer.",
 
       "how_to_participate": "Hur kan jag delta?",
       "participation_info": "För att delta behöver du mäta din egen kroppstemperatur, och skicka in den tillsammans med annan information i datavyn.",
@@ -239,8 +239,8 @@
     },
     "dialog": {
       "pwa_installer": {
-        "title": "Installera Fever Map",
-        "content": "Fever Map kan installeras som en Progressive Web App. Om du gör det fungerar appen smidigare, och vi kan ge tilläggstjänster som push-notifikationer (på kommande).",
+        "title": "Installera Fevermap",
+        "content": "Fevermap kan installeras som en Progressive Web App. Om du gör det fungerar appen smidigare, och vi kan ge tilläggstjänster som push-notifikationer (på kommande).",
         "approve_text": "Installera",
         "decline_text": "Kanske senare"
       }
