--- a/app/src/assets/language/fi.json
+++ b/app/src/assets/language/fi.json
@@ -2,6 +2,7 @@
   "lang_name": "Suomi",
   "language": "Kieli",
   "fevermap_title": "Fevermap",
+  "back": "Takaisin",
 
   "landing": {
     "about": "Tietoa",
@@ -26,29 +27,48 @@
     "submission_period_disclaimer": "Välttyäksemme turhalta datalta, kirjaukset on rajoitettu tehtäväksi kerran joka 12. tunti.",
     "queued_entries": "Sinulla on %{queuedEntries} kirjausta, joita ei ole vielä synkronoitu serverin kanssa.",
     "sync_now": "Synkronoi nyt",
+    "new_entry": "Uusi kirjaus",
+    "first_time_disclaimer": "Koska tämä on ensimmäinen kertasi Fevermapissa, kysymme sinulta ensin muutaman kysymyksen.",
+    "these_questions_wont_be_repeated": "Näitä kysymyksiä ei kysytä enää seuraavilla kerroilla.",
     "questions": {
-      "do_you_have_fever": "Onko sinulla kuumetta tällä hetkellä?",
-      "yes": "Kyllä",
-      "no": "Ei",
+      "what_is_your_temperature": "Mikä on lämpötilasi?",
+      "temperature": "Lämpötila",
       "how_much": "Paljonko?",
       "degrees_of_fever": "%{degrees} astetta kuumetta",
       "not_measured": "En tiedä tarkalleen, en ole mitannut.",
+      "set_temperature": "Aseta lämpötila",
+      "other_symptoms": "Muita oireita?",
+      "choose_all_that_apply": "Valitse kaikki sinua koskevat",
+      "difficulty_to_breathe": "Hengitysvaikeuksia",
+      "cough": "Yskä",
+      "sore_throat": "Kurkkukipu",
+      "muscular_pain": "Lihaskipu",
+      "positive_covid_diagnosis": "Minulla on positiivinen COVID-19 diagnoosi.",
+      "set_symptoms": "Aseta oireet",
       "birth_year": "Syntymävuosi",
       "birth_year_placeholder": "Syntymävuosi (vuodet 1900 - 2020)",
       "gender_in_passport": "Passissa tai muussa virallisessa dokumentissa merkitty sukupuoli.",
       "male": "Mies",
       "female": "Nainen",
       "location_information": "Sijaintitiedot",
+      "whats_your_location": "Mikä on sijaintisi?",
       "city": "Kaupunki",
       "country": "Maa",
       "postal_code": "Postinumero",
       "location_determination_subtitle": "Sijainti määritellään sijaintirajapintaa käyttäen. Sallithan sijaintitunnistimien käytön.",
       "location_change_subtitle": "Päivittääksesi sijaintitiedot, päivitä tiedot maa- ja postinumerokentissä ja paina alla olevaa painiketta.",
       "update_location": "Päivitä sijainti",
-      "use_gps": "Hae sijainti GPS avulla"
+      "use_gps": "Hae sijainti GPS avulla",
+      "set_location_and_submit": "Aseta sijainti ja lähetä"
     },
     "previous_submissions": "Viimeisimmät kirjaukset",
-    "submit": "Lähetä"
+    "submit": "Lähetä",
+    "save": "Tallenna",
+    "last_submission_was_done": "Viimeisin kirjauksesi tehtiin %{date}",
+    "submission_count_text": "Olet syöttänyt kuumetietosi ",
+    "submission_count_times": "kertaa",
+    "currently_holding_a_streak_of": "Tämän hetken peräkkäisten päiviesti putki on: ",
+    "streak_days": "päivää"
   },
 
   "stats": {
