Activate and fix translations: cn, es
- Move cn.json to correct location
- Ensure langauges have 'language' in their own language
- Add language definitions in JS

--- a/app/src/assets/language/it.json
+++ b/app/src/assets/language/it.json
@@ -1,5 +1,5 @@
 {
-  "lang_name": "Italian",
+  "lang_name": "Italiano",
   "language": "Lingua",
   "fevermap_title": "Fevermap",
 
@@ -50,7 +50,7 @@
     "previous_submissions": "Rilevamenti passati",
     "submit": "Invia"
 },
- 
+
  "stats" : {
     "stats": "Statistiche"
   },
