--- a/app/src/assets/language/sv.json
+++ b/app/src/assets/language/sv.json
@@ -9,7 +9,7 @@
     "about_title": "Vad är Fevermap?",
     "about_content_explanation": "är en webbapplikation skapad för att samla in data om Covid-19 epidemin.",
     "about_current_methods": "Nuvarande metoder för att följa med Coronavirusets spridning ger inte en fullständig bild. Det tar för länge att testa alla, och det finns hur som helst inte testutrustning för det.",
-    "about_solution": "Fevermap is the solution for this problem. With Fevermap, ordinary people around the world can anonymously self-report their fever and other symptoms. This means that we can estimate the true prevalence of COVID-19 infections in real-time and provide authorities with data that helps them make data-based, correct and timely decisions about protective measures.",
+    "about_solution": "Fevermap är en lösning på problemte. Med Fevermap kan vem som helst anmäla sin egen feber och andra symtpom anonymt. Med denna info kan vi uppskatta det verkliga antalet COVID-19 -infektioner i realtid och förse myndigheter med data som hjälper dem att i god tid ta databaserade, korrekta beslut om skyddsåtgärder.",
     "about_data_collection": "Data som insamlas av Fevermap är anonyma och kommer att användas för att öka medvetenheten om den globala situationen.",
     "about_current_participant_count": "Hittills har Fevermap samlat in rapporter från %{participantCount} personer.",
 
@@ -22,36 +22,36 @@
   },
   "entry": {
     "data_entry": "Datainmatning",
-    "first_entry_disclaimer": "Dataposterna skickas in på basen av den dator eller telefon du använder. Vi skulle uppskatta om du kan använda samma apparat varje gång. Detta hjälper oss att följa sin febernivå bättre.",
+    "first_entry_disclaimer": "Din data skickas in på basen av den dator eller telefon du använder. Vi skulle uppskatta om du kan använda samma apparat varje gång. Detta hjälper oss att följa din febernivå bättre.",
     "last_submission": "Senaste registrering",
     "submission_period_disclaimer": "För att undvika onödiga data, så begränsas registreringar till var 12:e timme.",
     "queued_entries": "Du has %{queuedEntries} registreringar som ännu inte har skickats in till servern.",
     "sync_now": "Synkronisera nu",
-    "new_entry": "New entry",
-    "first_time_disclaimer": "As this is your first time using Fevermap, we will ask you a few questions first.",
-    "these_questions_wont_be_repeated": "These questions won't be repeated on future submissions.",
+    "new_entry": "Ny registrering",
+    "first_time_disclaimer": "Eftersom detta är första gången du använder Fevermap, frågar vi några frågor först.",
+    "these_questions_wont_be_repeated": "Följande gång behöver du inte svara på dessa.",
     "questions": {
-      "what_is_your_temperature": "What's your temperature?",
-      "temperature": "Temperature",
+      "what_is_your_temperature": "Vad är din kroppstemperatur?",
+      "temperature": "Temperatur",
       "how_much": "Hur hög?",
       "degrees_of_fever": "%{degrees} grader feber",
       "not_measured": "Vet inte, har inte mätt.",
-      "set_temperature": "Set temperature",
-      "other_symptoms": "Other symptoms?",
-      "choose_all_that_apply": "Choose all that apply",
-      "difficulty_to_breathe": "Difficulty to breathe",
-      "cough": "Cough",
-      "sore_throat": "Sore throat",
-      "muscular_pain": "Muscular pain",
-      "positive_covid_diagnosis": "I have a positive diagnosis of COVID-19.",
-      "set_symptoms": "Set symptoms",
+      "set_temperature": "Välj temperatur",
+      "other_symptoms": "Andra symptom?",
+      "choose_all_that_apply": "Välj alla som stämmer in",
+      "difficulty_to_breathe": "Svårt att andas",
+      "cough": "Hosta",
+      "sore_throat": "Ont i halsen",
+      "muscular_pain": "Muskelvärk",
+      "positive_covid_diagnosis": "Jag har en positiv COVID-19 -diagnos.",
+      "set_symptoms": "Välj symptom",
       "birth_year": "Födelseår",
       "birth_year_placeholder": "Födelseår (från 1900 - 2020)",
       "gender_in_passport": "Kön, som angivet i ditt pass eller annat officiellt dokument",
       "male": "Man",
       "female": "Kvinna",
       "location_information": "Plats",
-      "whats_your_location": "What's your location?",
+      "whats_your_location": "Var befinner du dig?",
       "city": "Stad",
       "country": "Land",
       "postal_code": "Postnummer",
@@ -59,17 +59,17 @@
       "location_change_subtitle": "För att uppdatera platsinformation, välj land och skriv in ditt postnummer, eller tryck på knappen undertill.",
       "update_location": "Uppdatera plats",
       "use_gps": "Uppdatera plats genom GPS",
-      "set_location_and_submit": "Set location and submit"
+      "set_location_and_submit": "Välj plats och skicka in"
     },
     "previous_submissions": "Tidigare registreringar",
     "submit": "Skicka in",
-    "save": "Save",
+    "save": "Spara",
 
-    "last_submission_was_done": "You last submission was made at %{date}",
-    "submission_count_text": "You have entered you fever information ",
-    "submission_count_times": "times",
-    "currently_holding_a_streak_of": "Your current concurrent days streak is: ",
-    "streak_days": "days"
+    "last_submission_was_done": "Du har senast skickat in %{date}",
+    "submission_count_text": "Du har skickat in feberdata ",
+    "submission_count_times": "gånger",
+    "currently_holding_a_streak_of": "Du har just nu en serie på: ",
+    "streak_days": "efterföljande dagar"
   },
 
   "stats": {
