Feat: Data Entry view and Service Worker update

--- a/app/src/assets/language/es.json
+++ b/app/src/assets/language/es.json
@@ -70,6 +70,15 @@
     "streak_days": "días"
   },
 
+  "history": {
+    "title": "History",
+    "your_streak": "Your streak",
+    "days": "Days",
+    "total_entries": "Total entries",
+    "measurements": "measurement",
+    "add_entry": "Add entry"
+  },
+
   "stats": {
     "stats": "Estadísticas"
   },
