--- a/app/src/assets/language/cn.json
+++ b/app/src/assets/language/cn.json
@@ -72,6 +72,15 @@
     "streak_days": "天数"
   },
 
+  "history": {
+    "title": "History",
+    "your_streak": "Your streak",
+    "days": "Days",
+    "total_entries": "Total entries",
+    "measurements": "measurement",
+    "add_entry": "Add entry"
+  },
+
   "stats": {
     "stats": "统计资料"
   },
