--- a/app/src/assets/language/de.json
+++ b/app/src/assets/language/de.json
@@ -71,6 +71,15 @@
     "streak_days": "Tage"
   },
 
+  "history": {
+    "title": "History",
+    "your_streak": "Your streak",
+    "days": "Days",
+    "total_entries": "Total entries",
+    "measurements": "measurement",
+    "add_entry": "Add entry"
+  },
+
   "stats": {
     "stats": "Stat."
   },
