--- a/app/src/assets/language/it.json
+++ b/app/src/assets/language/it.json
@@ -2,6 +2,7 @@
   "lang_name": "Italiano",
   "language": "Lingua",
   "fevermap_title": "Fevermap",
+  "back": "Back",
 
   "landing": {
     "about": "Informazioni",
@@ -26,10 +27,21 @@
     "submission_period_disclaimer": "Affinché non vengano raccolti dati superflui, è permesso il caricamento di un nuovo rilevamento ogni 12 ore.",
     "queued_entries": "Ci sono %{queuedEntries} rilevamenti che non sono stati ancora sincronizzati con il server.",
     "sync_now": "Sincronizza ora",
+    "new_entry": "New entry",
+    "first_time_disclaimer": "As this is your first time using Fevermap, we will ask you a few questions first.",
+    "these_questions_wont_be_repeated": "These questions won't be repeated on future submissions.",
     "questions": {
-      "do_you_have_fever": " Hai la febbre al momento ?",
-      "yes": "Sì",
-      "no": "No",
+      "what_is_your_temperature": "What's your temperature?",
+      "temperature": "Temperature",
+      "set_temperature": "Set temperature",
+      "other_symptoms": "Other symptoms?",
+      "choose_all_that_apply": "Choose all that apply",
+      "difficulty_to_breathe": "Difficulty to breathe",
+      "cough": "Cough",
+      "sore_throat": "Sore throat",
+      "muscular_pain": "Muscular pain",
+      "positive_covid_diagnosis": "I have a positive diagnosis of COVID-19.",
+      "set_symptoms": "Set symptoms",
       "how_much": "A che temperatura ?",
       "degrees_of_fever": "%{degrees} di febbre",
       "not_measured": "Non lo so di preciso, non ho misurato.",
@@ -39,17 +51,29 @@
       "male": "Uomo",
       "female": "Donna",
       "location_information": "Informazioni Geografiche",
+      "whats_your_location": "What's your location?",
       "city": "Città",
       "country": "Paese",
       "postal_code": "Codice di Avviamento Postale",
       "location_determination_subtitle": "La posizione verrà determinata usando l'API. Assicurati di attivare il posizionamento dalle impostazioni del tuo dispositivo.",
       "location_change_subtitle": "Per cambiare la posizione, modifica il paese e il CAP nelle rispettive caselle o premi il pulsante sottostante.",
       "update_location": "Cambia Posizione",
-      "use_gps": "Ottieni Posizione tramite GPS"
+      "use_gps": "Ottieni Posizione tramite GPS",
+      "set_location_and_submit": "Set location and submit"
     },
     "previous_submissions": "Rilevamenti passati",
-    "submit": "Invia"
-},
+    "submit": "Invia",
+    "save": "Save"
+  },
+
+  "history": {
+    "title": "History",
+    "your_streak": "Your streak",
+    "days": "Days",
+    "total_entries": "Total entries",
+    "measurements": "measurement",
+    "add_entry": "Add entry"
+  },
 
  "stats" : {
     "stats": "Statistiche"
